--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html> 
     <head> 
         <meta http-equiv="Content-Type" content="text/html; charset=utf-8"> 
-        <title>Hello World</title> 
+        <title>Hellooo World</title> 
  
         <script src="lib/touch/sencha-touch.js" type="text/javascript"></script> 
         <link href="lib/touch/resources/css/sencha-touch.css" rel="stylesheet" type="text/css" /> 
